<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="#101010"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="15dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/user"
                app:civ_border_color="#ed0624"
                app:civ_border_width="2dp" />
            <ProgressBar
                android:layout_width="match_parent"
                android:id="@+id/myprogressbar"
                android:visibility="gone"
                android:layout_margin="10dp"
                android:progressTint="@color/colorPrimary"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                style="@style/lisItemTextStyle"
                android:layout_marginBottom="10dp"
                android:id="@+id/homeless_name"
                android:hint="@string/name"
                android:textColor="#0d5ca6" />

            <EditText
                style="@style/lisItemTextStyle"
                android:layout_marginBottom="10dp"
                android:id="@+id/homeless_address"
                android:hint="@string/address"
                android:textColor="#0d5ca6" />


            <EditText
                style="@style/lisItemTextStyle"
                android:id="@+id/homeless_city"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:hint="@string/city"
                android:textColor="#0d5ca6" />



        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id ="@+id/push_button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/cancel"
            android:background="@drawable/button_bg_round"
            android:padding="15dp"
            />

        <Button
        android:id ="@+id/push_button1"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/submit"
        android:background="@drawable/button_bg_round"
        android:padding="15dp"
        android:layout_alignParentRight="true"/>

    </RelativeLayout>

</LinearLayout>